<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Metagenomics</string>
    <string name="load_name">Choose a file</string>
    <string name="web_name">Enter file info</string>
    <string name="fileHint">Enter a filename</string>
    <string name="phoneNumberHint">Enter phone number</string>
    <string name="sampleNumberHint">Enter sample number</string>
    <string name="titleHint">Or enter title</string>
    <!--  <string name="useMyNumber">Use this phone\'s number</string> -->
    <string name="useMyNumber">Use my #</string>
    <string name="browse">Browse</string>
    <string name="stringency">Stringency:</string>
    <string name="level">Level:</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="save">Save Results</string>
    <string name="load_local">Load Local Results</string>
    <string name="load_web">Load Web Results</string>
    <string name="get_title">Get Sample Title</string>
    <string name="get_json_or_title">Get Results or Sample Title</string>
    <string name="get_all_titles">Get All Titles</string>
    <string name="help">Help</string>
    <string name="show_advanced">Show Advanced Options</string>
    <string name="hide_advanced">Hide Advanced Options</string>
    <string name="no_filemanager_installed">No File Manager installed; install one, or type in file name to annotate.</string>
	<string name="kmer">Word Size:</string>
	<string name="maxGap">Max Gap:</string>
	<string name="confirm">Confirm</string>
	<string name="email">Email</string>
	<string name="web">Web Storage</string>
	<string name="share_query">Share via email or the results storage web server?</string>
	<string name="server_get_query">Choose a method to get results from the server</string>
	<string name="help_text">This application takes as input a metagenome sequence in the form of a fasta format text file.\n
	\nIt will annotate the metagenome data according to the settings choices you make.\n
	\nStringency determines how many results you will get back.\n
	\nFunction determines what type of annotation you want.\n
	\nWord size (k-mers) determines how long the strings are during the matching.\n
	\nMax gap determines how much distance there can be between matches.\n
	\nFor more information about this project, visit http://edwards.sdsu.edu/rtmg/
	</string>
</resources>
