<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <LinearLayout android:id="@+id/PhoneNumberDiv"
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	
	<EditText android:id="@+id/PhoneNumber" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/phoneNumberHint" android:inputType="phone" android:layout_weight="1">
	</EditText><Button android:id="@+id/UseMyNumber" 
		android:layout_below="@+id/PhoneNumber" 
		android:layout_width="fill_parent" 
		android:text="@string/useMyNumber" 
		android:layout_height="fill_parent"
		android:layout_weight="2">
	</Button>
	</LinearLayout>
	<LinearLayout
	android:id="@+id/ButtonDiv"
	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/PhoneNumberDiv">
	<Button android:id="@+id/GetAllTitles" 
		android:layout_weight="1"
		android:layout_width="fill_parent" 
		android:text="@string/get_all_titles" 
		android:layout_height="fill_parent">
	</Button>
	<Button android:id="@+id/ShowAdvanced" 
		android:layout_weight="1"
		android:layout_width="fill_parent" 
		android:text="@string/show_advanced" 
		android:layout_height="fill_parent">
	</Button>
	</LinearLayout>
	<Spinner android:id="@+id/StringencySpinner" 
		android:layout_below="@+id/ButtonDiv" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:prompt="@string/stringency"
		android:entries="@array/stringency">
	</Spinner>
	<Spinner android:id="@+id/KmerSpinner" 
		android:layout_below="@+id/StringencySpinner" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:entries="@array/kmer"
		android:prompt="@string/kmer">	
	</Spinner>
	<Spinner android:id="@+id/MaxGapSpinner" 
		android:layout_below="@+id/KmerSpinner" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:entries="@array/maxGap"
		android:prompt="@string/maxGap">	
	</Spinner>
</RelativeLayout>